<package format="3">
  <name>udp_client</name>
  <version>0.1.0</version>
  <description>ROS2 UDP client node.</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
